--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,12 @@ git:
   depth: 3
 script: 
   - yarn build
+notifications:
+  email:
+    recipients:
+      - mytacam78@gmail.com
+      on_success: always
+      on_failure: always
 deploy:
   provider: pages
   skip-cleanup: true
