--- a/.travis.yml
+++ b/.travis.yml
@@ -13,10 +13,10 @@ script:
   - yarn build
 notifications:
   email:
-    reciepients:
+    recipients:
       - mytacam78@gmail.com
-      on_success: always
-      on_failure: always
+    on_success: always
+    on_failure: always
 deploy:
   provider: pages
   skip-cleanup: true
